# avr-cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/avr/: compiler_flags.cmake  helpers_functions.cmake
src/: main.cpp  main_void.cpp
