cmake_minimum_required(VERSION 3.17)
project(${PROJECT_NAME})
add_avr_executable(${PROJECT_NAME} ${MCU} src/main.cpp)
add_library(project_options INTERFACE)
target_compile_features(project_options INTERFACE cxx_std_17)
set_project_options(project_options)
add_library(project_warnings INTERFACE)
set_project_warnings(project_warnings)
target_link_libraries(${PROJECT_NAME}.elf PRIVATE project_options project_warnings)
configure_cpptools(${PROJECT_NAME} ${CPPTOOL_PATH})